fixed all documentation

--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -3260,15 +3260,14 @@
     "def get_final_recipes(recipe_list, scores, model):  ###<=== Function for evaluating if the score passes the threshold and regenerating if it doesn't\n",
     "\n",
     "    \"\"\"\n",
-    "    This evaluates whether the score of a recipe passes or fails the threshold.\n",
-    "    If the recipe doesn't meet the threshold after 3 attempts, the last generated recipe is added.\n",
-    "    NOTE FOR FRONT-END: it's important to make sure that the outputs of the new recipe generator are the same as the\n",
-    "                        old version for this function to still work.\n",
-    "                        optimized_gptrecipe() and scoring_model() must be replaced with the actual functions\n",
+    "    1. Evaluates whether the score of a recipe passes or fails the threshold.\n",
+    "    2. If a recipe fails, a new recipe is generated. \n",
+    "    3. If the recipe doesn't meet the threshold after 3 attempts, the last generated recipe is added.\n",
+    "    4. Separates the recipe output into titles, ingredients, directions (different output from recipe_generator).\n",
     "\n",
     "    Inputs (3):\n",
-    "    recipe_list (from: recipe_generator) = a list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
-    "    scores (from: get_scores) = list of 3 integers, containing scores for each recipe\n",
+    "    recipe_list (from: recipe_generator) = 1 list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
+    "    scores (from: get_scores) = 1 list of 3 integers, containing scores for each recipe\n",
     "    model (from: get_model in app.py) = object\n",
     "\n",
     "    Outputs (1):\n",
@@ -3276,7 +3275,6 @@
     "        'title': list of 3 strings, each string containing recipe title\n",
     "        'ingredients': list of 3 strings, each string containing recipe ingredients\n",
     "        'directions': list of 3 strings, each string containing recipe directions\n",
-    "\n",
     "    \"\"\"\n",
     "\n",
     "    final_recipes = {\"title\": [], \"ingredients\": [], \"directions\": []}\n",
@@ -3848,7 +3846,10 @@
    "source": [
     "def image_generator(final_recipes):\n",
     "    '''\n",
-    "    key_lists = 3 lists\n",
+    "    Generates images for each recipe title.\n",
+    "    \n",
+    "    Inputs (1):\n",
+    "    final_recipes: \n",
     "    \n",
     "\n",
     "    '''\n",
