--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -3845,14 +3845,20 @@
    "outputs": [],
    "source": [
     "def image_generator(final_recipes):\n",
+    "    \n",
     "    '''\n",
     "    Generates images for each recipe title.\n",
     "    \n",
     "    Inputs (1):\n",
-    "    final_recipes: \n",
-    "    \n",
-    "\n",
+    "    final_recipes = 1 dictionary with 3 keys:\n",
+    "        'title': list of 3 strings, each string containing recipe title\n",
+    "        'ingredients': list of 3 strings, each string containing recipe ingredients\n",
+    "        'directions': list of 3 strings, each string containing recipe directions\n",
+    "        \n",
+    "    Outputs (1):\n",
+    "    image_urls = 1 list with 3 strings, containing URLs for each generated image.\n",
     "    '''\n",
+    "    \n",
     "    client = Client(\"ByteDance/SDXL-Lightning\")\n",
     "    \n",
     "    titles = final_recipes['title']\n",
